tdf#129256: don't create objects only to destroy when moving preserved array

Restructure the StepDCREATE_IMPL code to do the preservation step before
creating the objects for the rest of array.

Change-Id: I4e4ba718af2da035b08397522e726eb131f813a4